Added safe, versioned rendering
